Adopt more features of Java 17