@@ -3,7 +3,6 @@ package io.cucumber.core.feature;
 import java.io.File;
 import java.net.URI;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Locale;
 
 import static io.cucumber.core.resource.ClasspathSupport.CLASSPATH_SCHEME_PREFIX;
@@ -71,7 +70,7 @@ public final class FeaturePath {
     }
 
     private static URI parseAssumeFileScheme(String featureIdentifier) {
-        Path featureFile = Paths.get(featureIdentifier);
+        Path featureFile = Path.of(featureIdentifier);
         return featureFile.toUri();
     }
 
