@@ -13,7 +13,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
@@ -36,7 +36,7 @@ class FeatureParserTest {
     @Deprecated
     void can_parse_with_deprecated_method() throws IOException {
         String source = Files
-                .readString(Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/no-pickles.feature"));
+                .readString(Path.of("src/test/resources/io/cucumber/core/gherkin/messages/no-pickles.feature"));
         Optional<Feature> feature = parser.parse(uri, source, UUID::randomUUID);
         assertTrue(feature.isPresent());
         assertEquals(0, feature.get().getPickles().size());
@@ -45,7 +45,7 @@ class FeatureParserTest {
     @Test
     void feature_file_without_pickles_is_parsed_produces_empty_feature() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/no-pickles.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/no-pickles.feature"))) {
             Optional<Feature> feature = parser.parse(uri, source, UUID::randomUUID);
             assertTrue(feature.isPresent());
             assertEquals(0, feature.get().getPickles().size());
@@ -55,7 +55,7 @@ class FeatureParserTest {
     @Test
     void empty_feature_file_is_parsed_but_produces_no_feature() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/empty.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/empty.feature"))) {
             Optional<Feature> feature = parser.parse(uri, source, UUID::randomUUID);
             assertFalse(feature.isPresent());
         }
@@ -64,7 +64,7 @@ class FeatureParserTest {
     @Test
     void unnamed_elements_return_empty_strings_as_name() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/unnamed.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/unnamed.feature"))) {
 
             Feature feature = parser.parse(uri, source, UUID::randomUUID).get();
             assertEquals(Optional.empty(), feature.getName());
@@ -92,7 +92,7 @@ class FeatureParserTest {
     @Test
     void empty_table_is_parsed() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/empty-table.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/empty-table.feature"))) {
             Feature feature = parser.parse(uri, source, UUID::randomUUID).get();
             Pickle pickle = feature.getPickles().get(0);
             Step step = pickle.getSteps().get(0);
@@ -104,7 +104,7 @@ class FeatureParserTest {
     @Test
     void empty_doc_string_media_type_is_null() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/doc-string.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/doc-string.feature"))) {
 
             Feature feature = parser.parse(uri, source, UUID::randomUUID).get();
             Pickle pickle = feature.getPickles().get(0);
@@ -122,7 +122,7 @@ class FeatureParserTest {
     @Test
     void backgrounds_can_occur_twice() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/background.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/background.feature"))) {
             Feature feature = parser.parse(uri, source, UUID::randomUUID).get();
             Pickle pickle = feature.getPickles().get(0);
             List<Step> steps = pickle.getSteps();
@@ -133,7 +133,7 @@ class FeatureParserTest {
     @Test
     void lexer_error_throws_exception() throws IOException {
         try (InputStream source = Files.newInputStream(
-            Paths.get("src/test/resources/io/cucumber/core/gherkin/messages/lexer-error.feature"))) {
+            Path.of("src/test/resources/io/cucumber/core/gherkin/messages/lexer-error.feature"))) {
             FeatureParserException exception = assertThrows(FeatureParserException.class,
                 () -> parser.parse(uri, source, UUID::randomUUID));
             assertEquals("""
